REGRESSION (r293427): [ iOS ] http/tests/quicklook/same-origin-xmlhttprequest-allowed.html is a constant crash and failure (240024) https://bugs.webkit.org/show_bug.cgi?id=240024 rdar://92678727

Reviewed by Wenson Hsieh.

Source/WebCore:

No new tests, this will fix a failing test.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::isLoadingRemoteArchive):
(WebCore::DocumentLoader::commitData):
(WebCore::DocumentLoader::scheduleArchiveLoad):
* loader/DocumentLoader.h:

LayoutTests:

* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/250267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293790 268f45cc-cd09-0410-ab3c-d52691b4dbfc